Implement face recognition system using vladmandic/human library
Features:
- Face training page with batch/class-based student selection
- Live camera attendance with real-time face matching
- Group photo support for batch attendance marking
- Cosine similarity-based face matching with confidence scores
- 5-capture training for robust face recognition
- Anti-spoof and liveness detection enabled
- Dynamic import to avoid SSR issues with Human.js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^7.2.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/pg": "^8.16.0",
+    "@vladmandic/human": "^3.3.6",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
