Add rich text body editor, PDF generation, and colorful approval timeline
Features added:
- Rich Text Body Editor (TipTap-based) for approval templates
  - Bold, italic, underline, strikethrough formatting
  - Tables with add/delete rows and columns
  - Bullet and numbered lists
  - Text alignment (left, center, right, justify)
  - Headings (H1, H2, H3)
  - Highlight text
  - Insert Field dropdown for {{fieldName}} placeholders

- PDF Generation for approval requests
  - Preview document modal
  - Download as PDF using jsPDF and html2canvas
  - Print functionality
  - Auto-fill {{fieldName}} placeholders with form data
  - System fields: request_number, template_name, requester_name, etc.

- Colorful Approval History Timeline
  - Visual progress indicator for pending approvals
  - Color-coded action badges (submit, approve, decline, send back)
  - Comments display with timestamps
  - Actor profile information
  - Current status banner with appropriate styling

- Updated APIs:
  - Added bodyTemplate field to ApprovalTemplate schema
  - Updated approval-templates API to handle bodyTemplate
  - Updated approval-requests API to include bodyTemplate in response

- Fixed: Changed action ordering to desc for latest first

--- a/package.json
+++ b/package.json
@@ -16,12 +16,27 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-color": "^3.15.3",
+    "@tiptap/extension-highlight": "^3.15.3",
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/extension-table": "^3.15.3",
+    "@tiptap/extension-table-cell": "^3.15.3",
+    "@tiptap/extension-table-header": "^3.15.3",
+    "@tiptap/extension-table-row": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/extension-text-style": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/pm": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "@types/pg": "^8.16.0",
     "@vladmandic/human": "^3.3.6",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
