--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/pm": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
+    "@types/leaflet": "^1.9.21",
     "@types/pg": "^8.16.0",
     "@vladmandic/human": "^3.3.6",
     "bcryptjs": "^3.0.3",
@@ -39,6 +40,7 @@
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
@@ -49,6 +51,7 @@
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.69.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
